--- a/app/src/main/res/values-night/splash theme.xml
+++ b/app/src/main/res/values-night/splash theme.xml
@@ -5,7 +5,7 @@
         <item name="windowSplashScreenBackground">@color/black</item>
         <item name="windowSplashScreenAnimatedIcon">@mipmap/ic_hamster</item>
         <item name="windowSplashScreenAnimationDuration">300</item>
-        <item name="postSplashScreenTheme">@style/Theme.HamsterTravellsApp</item>
+        <item name="postSplashScreenTheme">@style/Theme.HamsterTravelsApp</item>
 
         <!-- Status bar and Nav bar configs -->
         <item name="android:statusBarColor" tools:targetApi="l">@color/white</item>
